fixed a lot of bugs, mvp ready
