# internal/http_server/routes.go
@@ -1,35 +1,30 @@
 package http_server
 
 import (
-	"net/http"
-
 	"github.com/Uranury/RBK_finalProject/internal/middleware"
-	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 func (s *Server) setupRoutes() {
-	s.router.GET("/ping", func(c *gin.Context) {
-		c.JSON(http.StatusOK, gin.H{"message": "pong"})
-	})
+	protected := s.router.Group("/", middleware.JWTAuthMiddleware(s.authService))
+	s.router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
 	s.router.POST("/signup", s.userHandler.Signup)
 	s.router.POST("/login", s.userHandler.Login)
-
-	// Swagger documentation
-	s.router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	protected.GET("/profile", s.userHandler.Profile)
 
 	// Public endpoints
 	s.router.GET("/guns", s.skinHandler.GetGuns)
 	s.router.GET("/wears", s.skinHandler.GetWears)
 
-	protected := s.router.Group("/", middleware.JWTAuthMiddleware(s.authService))
 	// Marketplace
-	protected.GET("/marketplace/skins", s.marketplaceHandler.ListAvailable)
+	s.router.GET("/marketplace/skins", s.marketplaceHandler.ListAvailable)
 	protected.GET("/marketplace/skins/mine", s.marketplaceHandler.ListMine)
 	protected.GET("/marketplace/orders/:order_id", s.marketplaceHandler.GetOrder)
 	protected.POST("/marketplace/purchase", s.marketplaceHandler.Purchase)
 	protected.DELETE("/marketplace/skins/:skin_id", s.marketplaceHandler.RemoveFromListing)
+	protected.POST("/marketplace/sell", s.marketplaceHandler.Sell)
 	// Skin creation (protected)
 	protected.POST("/skins", s.skinHandler.Create)
 	// Transactions
